# ChangeLog for games-strategy/warzone2100
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-strategy/warzone2100/ChangeLog,v 1.23 2008/11/11 14:59:55 nyhm Exp $

*warzone2100-2.1_rc1 (11 Nov 2008)

  11 Nov 2008; Tristan Heaven <nyhm@gentoo.org> +warzone2100-2.1_rc1.ebuild:
  Version bump

*warzone2100-2.1_beta5 (05 Oct 2008)

  05 Oct 2008; Tristan Heaven <nyhm@gentoo.org>
  +warzone2100-2.1_beta5.ebuild:
  Version bump

*warzone2100-2.1_beta4 (09 Aug 2008)

  09 Aug 2008; Michael Sterrett <mr_bones_@gentoo.org>
  -files/warzone2100-2.1_beta2-encoding.patch,
  -warzone2100-2.1_beta2.ebuild, +warzone2100-2.1_beta4.ebuild:
  version bump

  26 Mar 2008; Tristan Heaven <nyhm@gentoo.org>
  warzone2100-2.1_beta2.ebuild:
  Add pkgconfig dependency

*warzone2100-2.1_beta2 (21 Mar 2008)

  21 Mar 2008; Tristan Heaven <nyhm@gentoo.org>
  +files/warzone2100-2.1_beta2-encoding.patch,
  +warzone2100-2.1_beta2.ebuild:
  Version bump, bug #211892

*warzone2100-2.0.10 (30 Dec 2007)

  30 Dec 2007; Tristan Heaven <nyhm@gentoo.org> +warzone2100-2.0.10.ebuild:
  Version bump

*warzone2100-2.0.9 (04 Dec 2007)

  04 Dec 2007; Tristan Heaven <nyhm@gentoo.org> +warzone2100-2.0.9.ebuild:
  Version bump

*warzone2100-2.0.7-r1 (01 Jul 2007)

  01 Jul 2007; Tristan Heaven <nyhm@gentoo.org>
  +files/warzone2100-2.0.7-hotfix1.patch, +warzone2100-2.0.7-r1.ebuild:
  Patch from Dennis Schridde, bug #183810

*warzone2100-2.0.7 (24 Jun 2007)

  24 Jun 2007; Tristan Heaven <nyhm@gentoo.org> +warzone2100-2.0.7.ebuild:
  Version bump, bug #182967

*warzone2100-2.0.6 (06 Apr 2007)

  06 Apr 2007; Tristan Heaven <nyhm@gentoo.org>
  +files/warzone2100-2.0.6-buffer-overflow.patch, +warzone2100-2.0.6.ebuild:
  Version bump with security patch, bug #173518

  14 Jan 2007; Joseph Jezak <josejx@gentoo.org> warzone2100-2.0.5.ebuild:
  Marked ~ppc for bug #161017.

*warzone2100-2.0.5 (25 Dec 2006)
