@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/warzone2100/Attic/warzone2100-2.1_rc1.ebuild,v 1.1 2008/11/11 14:59:55 nyhm Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/warzone2100/Attic/warzone2100-2.1_rc2.ebuild,v 1.1 2008/12/01 00:19:14 nyhm Exp $
 
 inherit autotools eutils versionator games
 
